added the required code  to execute spring-cloud gateway

--- a/BEJ_C2_S3_REST_API_MONGODB_PC_1/pom.xml
+++ b/BEJ_C2_S3_REST_API_MONGODB_PC_1/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
 
-    <groupId>com.niit.jdp</groupId>
+    <groupId>com.niit</groupId>
     <artifactId>BEJ_C2_S3_REST_API_MONGODB_PC_1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <description>project for Spring Boot</description>
@@ -23,6 +23,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
