--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
+        <version>2.5.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <modules>
         <module>BEJ_C2_S3_REST_API_MONGODB_PC_1</module>
         <module>userauthentication-demo-by-mam-master</module>
+        <module>SpringAPIGateway</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -47,11 +48,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>6.0.2</version>
-        </dependency>
 
     </dependencies>
     <build>
@@ -59,6 +55,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
