--- a/userauthentication-demo-by-mam-master/pom.xml
+++ b/userauthentication-demo-by-mam-master/pom.xml
@@ -26,9 +26,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
         <dependency>
