--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
 
     <modules>
         <module>BEJ_C2_S3_REST_API_MONGODB_PC_1</module>
         <module>userauthentication-demo-by-mam-master</module>
         <module>SpringAPIGateway</module>
+        <module>eureka-server</module>
     </modules>
 
     <packaging>pom</packaging>
