--- a/userauthentication-demo-by-mam-master/src/main/resources/application.properties
+++ b/userauthentication-demo-by-mam-master/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl_auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
