--- a/BEJ_C2_S3_REST_API_MONGODB_PC_1/pom.xml
+++ b/BEJ_C2_S3_REST_API_MONGODB_PC_1/pom.xml
@@ -17,6 +17,8 @@
 
     <properties>
         <java.version>11</java.version>
+        <spring-cloud.version>2020.0.3</spring-cloud.version>
+
     </properties>
 
     <dependencies>
@@ -29,6 +31,17 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
