--- a/BEJ_C2_S3_REST_API_MONGODB_PC_1/src/main/resources/application.properties
+++ b/BEJ_C2_S3_REST_API_MONGODB_PC_1/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8086
 spring.data.mongodb.uri=mongodb://mongoService:27017/customer
 spring.jpa.hibernate.ddl_auto=create
 server.error.include-message=always
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
