--- a/SpringAPIGateway/src/main/resources/application.properties
+++ b/SpringAPIGateway/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+spring.application.name=cloudapiservice
 server.port=9005
 spring.main.web-application-type=reactive
+eureka.client.serviceUrl.defaultZone=http://eureka-service:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
